# multi-agent-workbench

./: .env.example  .gitignore  README.md  pyproject.toml
data/corpus/docs/: architecture.md  overview.md  release_notes.md  roadmap.md  runbook.md
data/corpus/sqlite/: architecture.md  changes.md  limits.md  locking.md  overview.md  transactions.md  wal_mode.md
evals/cases/: northstar_change_summary.json  northstar_insufficient_evidence.json  northstar_retry_demo.json  northstar_runbook_only.json
evals/cases_sqlite/: sqlite_concurrency.json  sqlite_insufficient_evidence.json  sqlite_recent_changes.json  sqlite_wal_caveats.json  sqlite_wal_vs_rollback.json
src/multi_agent_workbench/: cli.py  config.py
src/multi_agent_workbench/agents/: critic.py  planner.py  planner_models.py  responder.py  retriever.py  supervisor.py
src/multi_agent_workbench/evals/: datasets.py  runner.py  scoring.py
src/multi_agent_workbench/llm/: client.py  client_base.py  client_factory.py  client_openai.py  client_state.py  client_stub.py  result.py
src/multi_agent_workbench/observability/: artifacts.py  traces.py
src/multi_agent_workbench/retrieval/: chunking.py  corpus.py  search.py
src/multi_agent_workbench/state/: models.py
src/multi_agent_workbench/tools/: doc_metadata.py  registry.py
src/multi_agent_workbench/workflows/: langgraph_flow.py  simple_loop.py  workflow_factory.py
tests/: client_stub.py  test_supervisor.py  test_workflow.py  test_workflow_factory.py
